syntax = "proto3";

package health.service.v1;

option java_outer_classname = "HealthServiceProto";
option java_package = "health.service.v1";

message CheckRequest {
  string service = 1;
}

message CheckResponse {
  enum ServingStatus {
    SERVING_STATUS_UNSPECIFIED = 0;
    SERVING_STATUS_SERVING = 1;
    SERVING_STATUS_NOT_SERVING = 2;
    SERVING_STATUS_SERVICE_UNKNOWN = 3;  // Used only by the Watch method.
  }
  ServingStatus status = 1;
}

service HealthService {
  rpc Check(CheckRequest) returns (CheckResponse);
}