syntax = "proto3";

package threat_protection.service.dashboard_service.v1;

import "threat_protection/message/malicious_event/dashboard/v1/message.proto";

// Dashboard service which the dashboard actions will call instead of directly calling DB
option java_outer_classname = "DashboardServiceProto";
option java_package = "threat_protection.service.dashboard_service.v1";

message ListMaliciousRequestsResponse {
    repeated threat_protection.message.malicious_event.dashboard.v1.DashboardMaliciousEventMessage malicious_events = 1;
    int32 total = 2;
    int32 page = 3;
}

message ListMaliciousRequestsRequest {
    // The number of alerts to return
    int32 limit = 3;
    optional int32 page = 4;
}

message FetchAlertFiltersRequest {}

message FetchAlertFiltersResponse {
  repeated string actors = 1;
  repeated string urls = 2;
}

service DashboardService {
    rpc ListMaliciousRequests(ListMaliciousRequestsRequest) returns (ListMaliciousRequestsResponse);
    rpc FetchAlertFilters(FetchAlertFiltersRequest) returns (FetchAlertFiltersResponse) {}
}